* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
* Bug fixes (see mercurial logs for details)
* Prevent editing list and cost prices without a company
* Make list price not required on product
* Provide digits from unit of measure
* Allow only fixed cost price as method for service

Version 6.0.0 - 2021-05-03
* Bug fixes (see mercurial logs for details)
* Deactivate variants when product is deactivated
* Allow multiple templates to be added/removed on a category

Version 5.8.0 - 2020-11-02
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5
* Allow the product template code to be set from a sequence
* Set code column first in template tree view
* Add default order on product and template
* Check price_decimal configuration

Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Add round_price
* Make product code unique
* Add code to template as variant prefix code
* Hide product fields inherited from template when empty
* Skip default products when template is created from product
* Search also on variant name when searching on template record name

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)
* Allow the product code to be set by a sequence
* Allow UoM conversion between different categories
* Add product identifiers

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Remove starting wildcard when searching on codes and numbers

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Remove support for Python 2.7

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Enforce digits length on Rounding Precision on Unit of Measure

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Show all products by category
* Limit cost method to fixed for service
* Move cost_price from Template to Product

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)